Fix wrapers

--- a/styles/global.style.css
+++ b/styles/global.style.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color:#141C27;
+    height: 200vh;
 }
 .navbar > a {
     text-decoration: none;
@@ -19,6 +20,7 @@ body{
     margin-right: 10px;
     height:70px;
     position: relative;
+    border-radius: 100px;
 }
 .logo{
 position:absolute;
@@ -27,19 +29,16 @@ top:10px;
 }
 .wraper1{
     height:30vh;
-    background-color: #032863;
-    clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
+    background-color: #05B8BB;
+    clip-path: polygon(0 30%, 100% 5%, 100% 100%, 0% 90%);
+    height: 75vh;
+    border-radius: -100px;
 }
-.wraper2{
-    height:30vh;
-    background-color: #032863;
-    clip-path: polygon(0 0%, 100% 0%, 100% 60%, 0 25%);
-}
-
-
 .wraper3{
     height:30vh;
-    background-color: #032863;
-    clip-path: polygon(0 35%, 100% 75%, 100% 100%, 0 100%);
+    background-color: #05B8BB;
+    clip-path: polygon(0 80%, 100% 90%, 100% 100%, 0 100%);
+   height: 155vh;
+
 
 }
